// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App snapshots 1`] = `
<div
  className="page"
>
  <div
    className="interactions"
  >
    <form
      onSubmit={[Function]}
    >
      &gt;
      Search
      <input
        onChange={[Function]}
        type="text"
      />
      <button
        type="submit"
      >
        Search
      </button>
    </form>
  </div>
  <div
    className="table"
  />
  <div
    className="interactions"
  >
    <button
      className=""
      onClick={[Function]}
      type="button"
    >
      More
    </button>
  </div>
</div>
`;

exports[`Button snapshots 1`] = `
<button
  className=""
  type="button"
>
  Give Me More
</button>
`;

exports[`Search snapshots 1`] = `
<form>
  &gt;
  Search
  <input
    type="text"
  />
  <button
    type="submit"
  >
    Search
  </button>
</form>
`;

exports[`Table snapshots 1`] = `
<div
  className="table"
>
  <div
    className="table-row"
  >
    <span
      style={
        Object {
          "largeColumn": Object {
            "width": "40%",
          },
        }
      }
    >
      <a>
        1
      </a>
    </span>
    <span
      style={
        Object {
          "midColumn": Object {
            "width": "30%",
          },
        }
      }
    >
      1
    </span>
    <span
      style={
        Object {
          "smallColumn": Object {
            "width": "10%",
          },
        }
      }
    >
      1
    </span>
    <span
      style={
        Object {
          "smallColumn": Object {
            "width": "10%",
          },
        }
      }
    >
      2
    </span>
    <span
      style={
        Object {
          "smallColumn": Object {
            "width": "10%",
          },
        }
      }
    >
      <button
        className=""
        onClick={[Function]}
        type="button"
      >
        Dismiss
      </button>
    </span>
  </div>
  <div
    className="table-row"
  >
    <span
      style={
        Object {
          "largeColumn": Object {
            "width": "40%",
          },
        }
      }
    >
      <a>
        2
      </a>
    </span>
    <span
      style={
        Object {
          "midColumn": Object {
            "width": "30%",
          },
        }
      }
    >
      2
    </span>
    <span
      style={
        Object {
          "smallColumn": Object {
            "width": "10%",
          },
        }
      }
    >
      1
    </span>
    <span
      style={
        Object {
          "smallColumn": Object {
            "width": "10%",
          },
        }
      }
    >
      2
    </span>
    <span
      style={
        Object {
          "smallColumn": Object {
            "width": "10%",
          },
        }
      }
    >
      <button
        className=""
        onClick={[Function]}
        type="button"
      >
        Dismiss
      </button>
    </span>
  </div>
</div>
`;
